libqt6c/src/libqlistwidget.hpp

typedef struct QListWidget QListWidget;
typedef struct QListWidgetItem QListWidgetItem;
typedef struct QMimeData QMimeData;
QMimeData* QListWidget_MimeData(const QListWidget* self, const libqt_list /* of QListWidgetItem* */ items);
bool QListWidget_DropMimeData(QListWidget* self, int index, const QMimeData* data, int action);
int QListWidget_SupportedDropActions(const QListWidget* self);
void QListWidget_SortItems1(QListWidget* self, int order);
void QListWidget_ScrollToItem2(QListWidget* self, const QListWidgetItem* item, int hint);
QStringList QListWidget_SuperMimeTypes(const QListWidget* self);
void QListWidget_OnMimeData(const QListWidget* self, intptr_t slot);
QMimeData* QListWidget_SuperMimeData(const QListWidget* self, const libqt_list /* of QListWidgetItem* */ items);
void QListWidget_OnDropMimeData(QListWidget* self, intptr_t slot);
bool QListWidget_SuperDropMimeData(QListWidget* self, int index, const QMimeData* data, int action);
void QListWidget_OnSupportedDropActions(const QListWidget* self, intptr_t slot);
int QListWidget_SuperSupportedDropActions(const QListWidget* self);