QtBeef/src/Qt/qlistwidget.bf

	
	[LinkName("QListWidget_SuperMimeTypes")]
	public static extern void* QListWidget_SuperMimeTypes(void* self);
	[LinkName("QListWidget_MimeData")]
	public static extern void** QListWidget_MimeData(void* self, void** items);
	
	public function void QListWidget_OnMimeData_action(void* self, void** items);
	[LinkName("QListWidget_OnMimeData")]
	public static extern void** QListWidget_OnMimeData(void* self, QListWidget_OnMimeData_action _action);
	
	[LinkName("QListWidget_SuperMimeData")]
	public static extern void** QListWidget_SuperMimeData(void* self, void** items);
	[LinkName("QListWidget_DropMimeData")]
	public static extern bool QListWidget_DropMimeData(void* self, c_int index, void** data, Qt_DropAction action);
	
	public function void QListWidget_OnDropMimeData_action(void* self, c_int index, void** data, Qt_DropAction action);
	[LinkName("QListWidget_OnDropMimeData")]
	public static extern bool QListWidget_OnDropMimeData(void* self, QListWidget_OnDropMimeData_action _action);
	
	[LinkName("QListWidget_SuperDropMimeData")]
	public static extern bool QListWidget_SuperDropMimeData(void* self, c_int index, void** data, Qt_DropAction action);
	[LinkName("QListWidget_SupportedDropActions")]
	public static extern void* QListWidget_SupportedDropActions(void* self);
	
	public function void QListWidget_OnSupportedDropActions_action(void* self);
	[LinkName("QListWidget_OnSupportedDropActions")]
	public static extern void* QListWidget_OnSupportedDropActions(void* self, QListWidget_OnSupportedDropActions_action _action);
	
	[LinkName("QListWidget_SuperSupportedDropActions")]
	public static extern void* QListWidget_SuperSupportedDropActions(void* self);
	[LinkName("QListWidget_Tr2")]
	public static extern libqt_string QListWidget_Tr2(c_char* s, c_char* c);
	[LinkName("QListWidget_Tr3")]
	public static extern libqt_string QListWidget_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QListWidget_SortItems1")]
	public static extern void QListWidget_SortItems1(void* self, Qt_SortOrder order);
	[LinkName("QListWidget_ScrollToItem2")]
	public static extern void QListWidget_ScrollToItem2(void* self, void** item, QAbstractItemView_ScrollHint hint);
}
[AllowDuplicates]
enum QListWidgetItem_ItemType
{
	Type = 0,
	UserType = 1000,
}